Ajout des classes Card et Operation et modification des Classes User et Account

--- a/BankStream/BankStream.csproj
+++ b/BankStream/BankStream.csproj
@@ -69,6 +69,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Account.cs" />
+    <Compile Include="Model\Card.cs" />
+    <Compile Include="Model\Operation.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
